Move array initialization to constructor